// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when no sidebars 1`] = `
<div>
  <div>
    <div
      class="flex flex-col flex-grow gap-2 pt-2 pb-3 border-r-1 border-colorNeutralBorder"
      data-testid="app-activitybar_activitybar"
    >
      <button
        aria-label="Workspace Home"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="currentColor"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="11"
                stroke-width="2"
                style="fill: none;"
              />
              <text
                alignment-baseline="central"
                stroke-width="0"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                H
              </text>
            </svg>
          </span>
        </span>
      </button>
      <div
        class="flex-grow"
      />
      <button
        aria-label="What's new"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </span>
      </button>
      <button
        aria-label="options menu"
        aria-pressed="false"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="currentColor"
              viewBox="0 0 18 18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#ff13dc"
                height="18"
                opacity="0"
                width="18"
              />
              <path
                d="M16.45,7.8965H14.8945a5.97644,5.97644,0,0,0-.921-2.2535L15.076,4.54a.55.55,0,0,0,.00219-.77781L15.076,3.76l-.8365-.836a.55.55,0,0,0-.77781-.00219L13.4595,2.924,12.357,4.0265a5.96235,5.96235,0,0,0-2.2535-.9205V1.55a.55.55,0,0,0-.55-.55H8.45a.55.55,0,0,0-.55.55V3.106a5.96235,5.96235,0,0,0-2.2535.9205l-1.1-1.1025a.55.55,0,0,0-.77781-.00219L3.7665,2.924,2.924,3.76a.55.55,0,0,0-.00219.77781L2.924,4.54,4.0265,5.643a5.97644,5.97644,0,0,0-.921,2.2535H1.55a.55.55,0,0,0-.55.55V9.55a.55.55,0,0,0,.55.55H3.1055a5.967,5.967,0,0,0,.921,2.2535L2.924,13.4595a.55.55,0,0,0-.00219.77782l.00219.00218.8365.8365a.55.55,0,0,0,.77781.00219L4.5405,15.076,5.643,13.9735a5.96235,5.96235,0,0,0,2.2535.9205V16.45a.55.55,0,0,0,.55.55H9.55a.55.55,0,0,0,.55-.55V14.894a5.96235,5.96235,0,0,0,2.2535-.9205L13.456,15.076a.55.55,0,0,0,.77782.00219L14.236,15.076l.8365-.8365a.55.55,0,0,0,.00219-.77781l-.00219-.00219L13.97,12.357a5.967,5.967,0,0,0,.921-2.2535H16.45a.55.55,0,0,0,.55-.55V8.45a.55.55,0,0,0-.54649-.55349ZM11.207,9A2.207,2.207,0,1,1,9,6.793H9A2.207,2.207,0,0,1,11.207,9Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders when sidebar is active 1`] = `
<div>
  <div>
    <div
      class="flex flex-col flex-grow gap-2 pt-2 pb-3 border-r-1 border-colorNeutralBorder"
      data-testid="app-activitybar_activitybar"
    >
      <button
        aria-label="Workspace Home"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="currentColor"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="11"
                stroke-width="2"
                style="fill: none;"
              />
              <text
                alignment-baseline="central"
                stroke-width="0"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                H
              </text>
            </svg>
          </span>
        </span>
      </button>
      <button
        aria-label="test-search-hint"
        class="border-l-2 BU_is-active  text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <span
              class="w-7 h-7  "
            >
              test-search-icon
            </span>
          </span>
        </span>
      </button>
      <div
        class="flex-grow"
      />
      <button
        aria-label="What's new"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </span>
      </button>
      <button
        aria-label="options menu"
        aria-pressed="false"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="currentColor"
              viewBox="0 0 18 18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#ff13dc"
                height="18"
                opacity="0"
                width="18"
              />
              <path
                d="M16.45,7.8965H14.8945a5.97644,5.97644,0,0,0-.921-2.2535L15.076,4.54a.55.55,0,0,0,.00219-.77781L15.076,3.76l-.8365-.836a.55.55,0,0,0-.77781-.00219L13.4595,2.924,12.357,4.0265a5.96235,5.96235,0,0,0-2.2535-.9205V1.55a.55.55,0,0,0-.55-.55H8.45a.55.55,0,0,0-.55.55V3.106a5.96235,5.96235,0,0,0-2.2535.9205l-1.1-1.1025a.55.55,0,0,0-.77781-.00219L3.7665,2.924,2.924,3.76a.55.55,0,0,0-.00219.77781L2.924,4.54,4.0265,5.643a5.97644,5.97644,0,0,0-.921,2.2535H1.55a.55.55,0,0,0-.55.55V9.55a.55.55,0,0,0,.55.55H3.1055a5.967,5.967,0,0,0,.921,2.2535L2.924,13.4595a.55.55,0,0,0-.00219.77782l.00219.00218.8365.8365a.55.55,0,0,0,.77781.00219L4.5405,15.076,5.643,13.9735a5.96235,5.96235,0,0,0,2.2535.9205V16.45a.55.55,0,0,0,.55.55H9.55a.55.55,0,0,0,.55-.55V14.894a5.96235,5.96235,0,0,0,2.2535-.9205L13.456,15.076a.55.55,0,0,0,.77782.00219L14.236,15.076l.8365-.8365a.55.55,0,0,0,.00219-.77781l-.00219-.00219L13.97,12.357a5.967,5.967,0,0,0,.921-2.2535H16.45a.55.55,0,0,0,.55-.55V8.45a.55.55,0,0,0-.54649-.55349ZM11.207,9A2.207,2.207,0,1,1,9,6.793H9A2.207,2.207,0,0,1,11.207,9Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders when there is sidebar 1`] = `
<div>
  <div>
    <div
      class="flex flex-col flex-grow gap-2 pt-2 pb-3 border-r-1 border-colorNeutralBorder"
      data-testid="app-activitybar_activitybar"
    >
      <button
        aria-label="Workspace Home"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="currentColor"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="11"
                stroke-width="2"
                style="fill: none;"
              />
              <text
                alignment-baseline="central"
                stroke-width="0"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                H
              </text>
            </svg>
          </span>
        </span>
      </button>
      <button
        aria-label="test-search-hint"
        class="border-l-2  text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <span
              class="w-7 h-7  "
            >
              test-search-icon
            </span>
          </span>
        </span>
      </button>
      <div
        class="flex-grow"
      />
      <button
        aria-label="What's new"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </span>
      </button>
      <button
        aria-label="options menu"
        aria-pressed="false"
        class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
        style="background-color: transparent; border-radius: 0; padding: 0px;"
        type="button"
      >
        <span
          class="flex flex-grow-1 overflow-hidden "
          style="justify-content: center;"
        >
          <span>
            <svg
              class="w-7 h-7  "
              fill="currentColor"
              viewBox="0 0 18 18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#ff13dc"
                height="18"
                opacity="0"
                width="18"
              />
              <path
                d="M16.45,7.8965H14.8945a5.97644,5.97644,0,0,0-.921-2.2535L15.076,4.54a.55.55,0,0,0,.00219-.77781L15.076,3.76l-.8365-.836a.55.55,0,0,0-.77781-.00219L13.4595,2.924,12.357,4.0265a5.96235,5.96235,0,0,0-2.2535-.9205V1.55a.55.55,0,0,0-.55-.55H8.45a.55.55,0,0,0-.55.55V3.106a5.96235,5.96235,0,0,0-2.2535.9205l-1.1-1.1025a.55.55,0,0,0-.77781-.00219L3.7665,2.924,2.924,3.76a.55.55,0,0,0-.00219.77781L2.924,4.54,4.0265,5.643a5.97644,5.97644,0,0,0-.921,2.2535H1.55a.55.55,0,0,0-.55.55V9.55a.55.55,0,0,0,.55.55H3.1055a5.967,5.967,0,0,0,.921,2.2535L2.924,13.4595a.55.55,0,0,0-.00219.77782l.00219.00218.8365.8365a.55.55,0,0,0,.77781.00219L4.5405,15.076,5.643,13.9735a5.96235,5.96235,0,0,0,2.2535.9205V16.45a.55.55,0,0,0,.55.55H9.55a.55.55,0,0,0,.55-.55V14.894a5.96235,5.96235,0,0,0,2.2535-.9205L13.456,15.076a.55.55,0,0,0,.77782.00219L14.236,15.076l.8365-.8365a.55.55,0,0,0,.00219-.77781l-.00219-.00219L13.97,12.357a5.967,5.967,0,0,0,.921-2.2535H16.45a.55.55,0,0,0,.55-.55V8.45a.55.55,0,0,0-.54649-.55349ZM11.207,9A2.207,2.207,0,1,1,9,6.793H9A2.207,2.207,0,0,1,11.207,9Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
